0030203: ProjLib_ComputeApproxOnPolarSurface::BuildInitialCurve2d array out of bound

Bug fixing: avoiding calculation if tPp == NbOfPnts